--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -73,8 +73,10 @@
 	<h2>Instance methods</h2>
 	<ul>
 		<li>{{{createLink 'ractive.add()'}}}</li>
+		<li>{{{createLink 'ractive.attachChild()'}}}</li>
 		<li>{{{createLink 'ractive.animate()'}}}</li>
 		<li>{{{createLink 'ractive.detach()'}}}</li>
+		<li>{{{createLink 'ractive.detachChild()'}}}</li>
 		<li>{{{createLink 'ractive.find()'}}}</li>
 		<li>{{{createLink 'ractive.findAll()'}}}</li>
 		<li>{{{createLink 'ractive.findAllComponents()'}}}</li>
@@ -117,7 +119,6 @@
 	<h2>Instance properties</h2>
 	<ul>
 		<li>{{{createLink 'ractive.container'}}}</li>
-		<li>{{{createLink 'ractive.nodes'}}}</li>
 		<li>{{{createLink 'ractive.transitions (instance)' 'ractive.transitions'}}}</li>
 		<li>{{{createLink 'ractive.parent'}}}</li>
 		<li>{{{createLink 'ractive.partials (instance)' 'ractive.partials'}}}</li>
