--- a/docs/edge/Get started.md.hbs
+++ b/docs/edge/Get started.md.hbs
@@ -11,14 +11,13 @@ with the desired options:
 
 ```js
 var ractive = new Ractive({
-  el: 'container',
+  target: 'container',
   template: '<p>\{{greeting}}, \{{recipient}}!</p>',
   data: { greeting: 'Hello', recipient: 'world' }
 });
 ```
 
-While there are no _required_ options, the three shown above - __el__ement, __template__ and __data__ - are the most common. They specify __what data__ to bind to __what template__ and __where__ it should be placed
-in the __html document__.
+While there are no _required_ options, the three shown above - __target__, __template__ and __data__ - are the most common. They specify __what data__ to bind to __what template__ and __where__ it should be placed in the __html document__.
 
 A good way to get up and running is with the [60 second setup](http://ractivejs.org/60-second-setup). After that, working your way through the [interactive tutorials](http://learn.ractivejs.org) will familiarise you with the various ways you can use Ractive.
 
@@ -27,6 +26,6 @@ all the available options.
 
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
 
-*Documentation for previous versions: [0.3.9](../0.3.9), [0.4.0](../0.4.0), [0.5.x](../0.5), [0.6.x](../0.6), [0.7.x](../0.7)*
+*Documentation for previous versions: [0.3.9](../0.3.9), [0.4.0](../0.4.0), [0.5.x](../0.5), [0.6.x](../0.6), [0.7.x](../0.7), [0.8.x](../0.8)*
 
 *Documentation for latest version: [latest](../latest)*
