--- a/docs/edge/Migrating.md.hbs
+++ b/docs/edge/Migrating.md.hbs
@@ -4,6 +4,96 @@ title: 'Migrating to Edge'
 
 Many of these migration notes are cribbed from the [CHANGELOG](https://github.com/ractivejs/ractive/blob/dev/CHANGELOG.md). While we strive to minimise breaking changes, and to highlight the ones we do introduce, if you discover an undocumented breaking change please edit this page.
 
+## Migrating from 0.8.x
+
+0.9 is a much more evolutionary change from 0.8. The biggest breaking changes are that there is no longer a legacy version supplied, so you must bring your own polyfills, and deprecations have been removed. When 0.9 is released, there will likely be a packaged polyfills script distributed with Ractive to make assembling the necessary polyfills easier.
+
+### What's new
+
+#### Stable
+
+`target` is now an alias for `el` when creating a Ractive instance.
+
+You can now use spread expressions with array and object literals in expressions in addition to method calls. Object spreads will require `Object.assign` to be available.
+
+There is a new lifecycle hook, `destruct` that fires after teardown is complete and any related transitions have completed.
+
+Lifecycle events now receive the source Ractive instance as their last argument.
+
+You can now use context-relative `observe` and `observeOnce` from event and node info objects.
+
+You can now access decorator objects from event and node info objects using `obj.decorators.name`, where name is the decorator name as specified in the template e.g. `foo` in `<div as-foo />`.
+
+#### Unstable (pending feedback to stabilize in 0.10)
+
+You can now create cross-instance links by passing an options object with a target instance e.g. `this.link('source.path', 'dest.path', { ractive: sourceInstance })`. This covers many of the cases handled by the `ractive-ractive` adaptor in a considerably more efficient manner.
+
+There is now an API to manage embedding external instances i.e. out-of-template components. You can use `ractive.attachChild(otherRactive, { options })` and `ractive.detachChild(otherRactive)` to create a component relationship between two instances. There is a new anchor construct `<#anchorName />` that behaves mostly like a regular inline component except that it won't create its own Ractive instance. You can target an anchor when attaching a child by giving an anchor name as an option e.g. `ractive.attachChild(otherRactive, { target: 'anchorName' })`. Attached children need not be components, so you can attach a plain Ractive instance e.g. `const foo = new Ractive({ ... }); ractive.attachChild(foo);`.
+
+`\{{yield}}` can now be used with any partial, not just inlines, and it may also use an expression to look up the target partial. It basically behaves as a regular partial with a special context. `\{{yield}}` can also specify aliases, so that yielding is useful inside an iterative section. `\{{yield partialName with foo as bar}}` and `\{{yield with foo as bar}}` will make `foo` from the component context available to the `partialName` partial as `bar`.
+
+You can specify that child keypaths of computations should trigger updates on the computation's dependencies, which _should_ have the effect of keeping the models involved in the computation in sync with changes to the computed models. The flag to enable this behavior at instance creation is `syncComputedChildren: true`. With that flag set, children of computations are available for two-way binding and mutation from event or `getNodeInfo` objects using relative keypaths.
+
+`@.foo` has been introduced as shorthand for `@this.foo`. This mirrors the data shorthand `.foo` for `this.foo`.
+
+You can now pop contexts using `^^/` in the same way that you can pop keypaths with `../`.
+
+Special keypaths that resolve to Ractive instances now resolve using the proper model rather than a computation, so they now stay in sync.
+
+There is now a special key `data` on special keypaths that resolve to Ractive instances that resolves to the instance's root model. This allows things like `@.root.data.foo` to keep the root instance `foo` reference in sync throughout the component tree.
+
+There is a new Ractive-private shared store, `@shared`. This is roughly the same as `@global`, but it is not susceptible to interference from the global scope.
+
+There is a new option, `resolveInstanceMembers`, which defaults to `true`, and when enabled, it adds the instance scope `@this` to the end of the reference resolution process. This means that as long as there are no conflicting members in the context hierarchy, things like `<button on-click="set('foo', 'bar')">yep</button>` work as expected. Note that the resolved function will only be bound to the instance if it contains a `this` reference, which can be a little strange if you're debugging.
+
+There is a new option, `warnAboutAmbiguity`, which defaults to `false`, and when set, it will issue a warning any time a reference fails to resolve at all or fails to resolve to a member in the immediate context.
+
+API methods can now handle things like `ractive.set('~/foo', 'bar')`, mirroring how context methods for `getNodeInfo` and `event`s are handled. Things like `ractive.set('.foo', 'bar')` will now issue a warning and do nothing rather than creating an incorrect keypath (`<empty string>.foo`).
+
+You can now trigger event listeners in the VDOM from event and node info objects e.g. with `<div on-foo="@global.alert('hello')" >` with `ractive.getNodeInfo('div').raise('foo');` will trigger an alert.
+
+There are two new options available for subscribing events and observers when an instance is created using two new options.
+* `on` takes a hash of event listeners that will be subscribed just after the `construct` phase of instantiation, meaning that any lifecycle events after `construct` may also have listeners added in the event hash.
+* `observe` takes a hash of observers that will be subscribed just after the `config` phase of instantiation.
+* Both of these options are additive, so any subscriptions defined in component super classes are applied first in sequence from the root of the component class hierarchy down to the options of the instance being created.
+* The hashes can contain keys that could be passed directly to the matching method e.g. `ractive.on( key, ... )` or `ractive.observe( key, ... )`.
+* The hashes can contain values that are either a callback function or an object that has a `handler` property that is a callback function. If the object form is used, any additional keys are passed to the method. If a `once` property is supplied and is truthy, then the appropriate single-fire method will be used to subscribe. For instance `observe: { 'foo.* bar': { handler() { ... }, strict: true, once: true, defer: true } }` passed in an options object is equivalent to calling `ractive.observeOnce( 'foo.* bar', function() { ... }, { strict: true, defer: true } )` during the `init` phase of instantiation.
+
+Event listener handles return from `ractive.on( ... )` now have methods to silence and resume the listener. The existing `cancel()` method now has siblings `isSilenced()`, `silence()`, and `resume()`. When a listener is silenced, it will not call its callback.
+
+Like event listeners, observer listener handles also have methods to silence and resume the listener. While an observer is silenced, it will still track state changes internally, meaning the old value on the next call after being resumed will be the last value it observed, including those observed while it was silenced. It simply won't fire its callback while it is silenced.
+
+You can now stop component outros from firing while a component is being unrendered by specifying `noOutro: true`, which mirrors the behavior of `noIntro`.
+
+You can now specify whether or not transitions should occur if they are on a child element of another transitioning element by using:
+* Instance option `nestedTransitions`, which defaults to `true`, meaning that transitions will fire whether they are on elements that are children of other transitioning elements or not.
+* The transition option `nested`, which also defaults to `true`.
+
+There's a new `ractive` command distributed with the node module that allows easy pre-parsing of templates and building of components. If you have the module installed locally, see `./node_modules/.bin/ractive` for more details.
+
+### Breaking changes and deprecations
+
+* All deprecations have been removed, including proxy events with args, un-prefixed method events, decorator="...", transition="...", the ractive.data getter, partial comment definitions, and lifecycle methods like `init` and `beforeInit`.
+
+* The template spec is now a bit simpler after the removal of deprecations, and templates parsed with previous versions of Ractive are no longer compatible.
+
+* Partial context (`\{{>foo thisIsTheContext}}`) now only applies inside the partial template, meaning it is no longer equivalent to `\{{#with thisIsTheContext}}\{{>foo}}\{{/with}}`. The with is wrapped around the content of `foo`, so that the context doesn't interfere with the partial expression.
+
+* Any partial may be yielded, so yielding non-inline partials will no longer warn.
+
+* The same partial may be yielded multiple times.
+
+* Events now fire in an initial implicit `this.` namespace. This means that with `this.on( '*.foo', handler )`, `handler` will be called if and component fires a `foo` event or if the `this` instance fires a `foo` event.
+
+* The `noIntro` option now applies to any nested components that are also being rendered, unless they have their own explicit setting.
+
+* Legacy builds removed. Only regular and runtime builds are now available.
+	* `Promise` shim required for IE11.
+	* `requestAnimationFrame` polyfill required for IE10.
+	* es5-shim required for non-ES5 browsers.
+
+* `ractive.nodes` no longer contains elements by id. The same functionality can be handled more safely and conveniently with a decorator.
+
 ## Migrating from 0.7.x
 
 ### What's new
