--- a/docs/edge/Options.md.hbs
+++ b/docs/edge/Options.md.hbs
@@ -32,7 +32,7 @@ ractive.myMethod(); // triggers the alert
 | [decorators](#decorators)                         | [templating](#templating)              | decorators to include for use by the template |
 | [delimiters](#delimiters)                         | [parsing](#parsing)                    | delimiters to use when parsing the template |
 | [easing](#easing)                                 | [transitions](#transitions-animations) | easing functions to use in transitions |
-| [el](#el)                                         | [placement](#dom-placement)            | render to this element in the dom |
+| [el](#el)                                         | [placement](#dom-placement)            | render to this element in the dom (alias for target) |
 | [enhance](#enhance)                               | [placement](#dom-placement)            | try to reuse existing DOM on intial render |
 | [events](#events)                                 | [templating](#templating)              | events to include for use by the template |
 | [interpolators](#interpolators)                   | [transitions](#transitions-animations) | interpolators to use for animating values |
@@ -40,30 +40,38 @@ ractive.myMethod(); // triggers the alert
 | [lazy](#lazy)                                     | [binding](#data-binding)               | don't bind to every keypress |
 | [magic](#magic)                                   | [binding](#data-binding)               | data object getters and setters that update view |
 | [modifyArrays](#modifyArrays)                     | [binding](#data-binding)               | array modification methods update the view |
+| [nestedTransitions](#nestedTransitions)           | [transitions](#transitions-animations) | allow or prevent transitions in children of transitioning elements |
 | [noCssTransform](#noCssTransform)                 | [templating](#templating)              | prevent transformation of component css |
 | [noIntro](#noIntro)                               | [transitions](#transitions-animations) | do not apply transitions on render |
-| [onchange](#onchange)                             | [lifecycle events](#lifecycle-events)  | event fired when data changes
-| [oncomplete](#oncomplete)                         | [lifecycle events](#lifecycle-events)  | event fired once {{{createLink 'transitions'}}} have completed
-| [onconfig](#onconfig)                             | [lifecycle events](#lifecycle-events)  | event fired once all configuration options have been processed
-| [onconstruct](#onconstruct)                       | [lifecycle events](#lifecycle-events)  | event fired immediately after `new Ractive(...)`
-| [ondetach](#ondetach)                             | [lifecycle events](#lifecycle-events)  | event fired each time `ractive.detach()` is called
-| [oninit](#oninit)                                 | [lifecycle events](#lifecycle-events)  | event fired when the instance is ready to be rendered
-| [oninsert](#oninsert)                             | [lifecycle events](#lifecycle-events)  | event fired each time `ractive.insert()` is called
-| [onrender](#onrender)                             | [lifecycle events](#lifecycle-events)  | event fired each time the instance is rendered
-| [onteardown](#onteardown)                         | [lifecycle events](#lifecycle-events)  | event fired each time the instance is destroyed
-| [onunrender](#onunrender)                         | [lifecycle events](#lifecycle-events)  | event fired each time the instance is unrendered
-| [onupdate](#onupdate)                             | [lifecycle events](#lifecycle-events)  | event fired after `ractive.update()` is called
+| [noOutro](#noOutro)                               | [transitions](#transitions-animations) | do not apply transitions on unrender |
+| [observe](#observe)                               | [shortcuts](#shortcuts)                | subscribe observers as the instance is configured |
+| [on](#on)                                         | [shortcuts](#shortcuts)                | subscribe event listeners as the instance is created |
+| [onchange](#onchange)                             | [lifecycle](#lifecycle-events)         | event fired when data changes
+| [oncomplete](#oncomplete)                         | [lifecycle](#lifecycle-events)         | event fired once {{{createLink 'transitions'}}} have completed
+| [onconfig](#onconfig)                             | [lifecycle](#lifecycle-events)         | event fired once all configuration options have been processed
+| [onconstruct](#onconstruct)                       | [lifecycle](#lifecycle-events)         | event fired immediately after `new Ractive(...)`
+| [ondetach](#ondetach)                             | [lifecycle](#lifecycle-events)         | event fired each time `ractive.detach()` is called
+| [oninit](#oninit)                                 | [lifecycle](#lifecycle-events)         | event fired when the instance is ready to be rendered
+| [oninsert](#oninsert)                             | [lifecycle](#lifecycle-events)         | event fired each time `ractive.insert()` is called
+| [onrender](#onrender)                             | [lifecycle](#lifecycle-events)         | event fired each time the instance is rendered
+| [onteardown](#onteardown)                         | [lifecycle](#lifecycle-events)         | event fired each time the instance is destroyed
+| [onunrender](#onunrender)                         | [lifecycle](#lifecycle-events)         | event fired each time the instance is unrendered
+| [onupdate](#onupdate)                             | [lifecycle](#lifecycle-events)         | event fired after `ractive.update()` is called
 | [partials](#partials)                             | [templating](#templating)              | partials to include for use by the template |
 | [preserveWhitespace](#preserveWhitespace)         | [parsing](#parsing)                    | don't normalize template whitespace |
+| [resolveInstanceMembers](#resolveInstanceMembers) | [data](#data-binding)                  | consider ractive methods and properties when resolving refs |
 | [sanitize](#sanitize)                             | [parsing](#parsing)                    | remove designated elements and event attributes |
 | [staticDelimiters](#staticDelimiters)             | [parsing](#parsing)                    | one-time binding parsing delimiters |
 | [staticTripleDelimiters](#staticTripleDelimiters) | [parsing](#parsing)                    | one-time binding non-escaped parsing delimiters  |
 | [stripComments](#stripComments)                   | [parsing](#parsing)                    | remove HTML comments from templates |
+| [syncComputedChildren](#syncComputedChildren)     | [data](@data-binding)                  | keep computation sources up-to-date when their children change |
+| [target](#el)                                     | [placement](#dom-placement)            | render to this element in the dom (alias for el) |
 | [template](#template)                             | [templating](#templating)              | specifies the template to use |
 | [transitions](#transitions)                       | [transitions](#transitions-animations) | transitions to include for use by the template |
 | [transitionsEnabled](#transitionsEnabled)         | [transitions](#transitions-animations) | allow transitions |
 | [tripleDelimiters](#tripleDelimiters)             | [parsing](#parsing)                    | non-escaped parsing delimiters |
 | [twoway](#twoway)                                 | [binding](#data-binding)               | prevent updates from the view back to the model |
+| [warnAboutAmbiguity](#warnAboutAmbiguity)         | [data](#data-binding)                  | issue a warning whenever a reference doesn't resolve in the current context |
 
 
 
@@ -145,7 +153,7 @@ ractive.myMethod(); // triggers the alert
 ## DOM Placement
 
 > <a id="el"></a>
-> ### el * `String` or `HTMLElement` or jQuery-like collection*
+> ### el *or* target * `String` or `HTMLElement` or jQuery-like collection*
 
 > Directives for the element to render to. Use `append` option (see below) to control whether existing content is replaced.
 
@@ -155,7 +163,7 @@ ractive.myMethod(); // triggers the alert
 > ```
 > * `HTMLElement` DOM element
 > ```js
-> el: document.body
+> target: document.body
 > ```
 > * any `obj` where `obj[0]` is an `HTMLElement`, see {{{createLink 'valid selectors' 'jquery collections' 'jquery-collections'}}}
 > ```js
@@ -225,7 +233,7 @@ ractive.myMethod(); // triggers the alert
 
 ## Data & Binding
 
-> <a id="data"></a>
+> <a id="data"></a><a id="data-binding"></a>
 > ### data *`Object` or `Function`*
 > The data with which to initialise.
 > ```js
@@ -291,6 +299,24 @@ ractive.myMethod(); // triggers the alert
 > items.push( 'green' );
 > ```
 
+> <a id="resolveInstanceMembers"></a>
+> ### resolveInstanceMembers *`Boolean`*
+> Defaults to `true`. Whether or not to consider instance members and properties during reference resolution. This allows un-prefixed calls to methods in event directive when there are no conflicting names e.g. `<button on-click="set('foo', 10)">click me</button>`. Assuming there isn't a `set` reference in the current context stack somewhere, this will behave the same as `<button on-click="@this.set('foo', 10)">click me</button>` when clicked.
+
+> <a id="syncComputedChildren"></a>
+> ### syncComputedChildren *`Boolean`*
+> Defaults to `false`. Whether or not to update computation sources when copmutation children change. **Warning**: this can be expensive for large or complex data structures.
+> ```js
+> var ractive = new Ractive({
+>     template: `\{{#with ~/filter(.list, 'a')}}<input value="\{{.foo}}">\{{/with}}`,
+>     data: {
+>       list: [ { foo: 'bar' } ],
+>       filter(list, filter) { return list; } // should actually return a filtered list
+>     }
+> });
+> ```
+> With this option is enabled, when the user changes the value of the input, each dependency of the computation, in this case `filter` and `list`, will be notified that there may be a change. The result is that any other references to `list.0.foo` will be notified that it has changed.
+
 > <a id="twoway"></a>
 > ### twoway *`Boolean`*
 > Defaults to `true`. Whether or not two-way data binding is enabled (see {{{createLink 'Two‐way binding'}}}).
@@ -328,11 +354,16 @@ ractive.myMethod(); // triggers the alert
 > ### isolated *`Boolean`*
 > Defaults to `false`. This option is typically only relevant as an extension option for {{{createLink 'Components'}}}. Controls whether the component will look outside itself for data and registry items.
 
+> <a id="warnAboutAmbiguity"></a>
+> ### warnAboutAmbiguity *`Boolean`*
+> Defaults to `false`. When this and `DEBUG` are enabled, any time a reference fails to resolve in the current context i.e. is ambiguous. Unambiguous references should generally be preferred to ambiguous references because they have better performance and maintenance characteristics.
+
 ## Lifecycle events
 
 See the {{{createLink 'lifecycle events' 'main entry for lifecycle events'}}}.
 
 ## Transitions & Animations
+<a id="transitions-animations"></a>
 
 > <a id="transitions"></a>
 > ### transitions *`Object`*
@@ -348,20 +379,57 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 > ### transitionsEnabled *`Boolean`*
 > Defaults to `true`. Whether or not transitions are enabled for this instance.
 
+> <a id="nestedTransitions"></a>
+> ### noIntro *`Boolean`*
+> Defaults to `true`. Whether or not to skip transitions on elements whose parents are also transitioning.
+> ```js
+> var ractive = new Ractive({
+>     template: '\{{#if show}}<h2>Some colors:</h2><ul fade-out>\{{#items}}<li fade-out>\{{.}}</li>\{{/items}}</ul>\{{#if}}',
+>	    data: { items: [ 'red', 'blue' ], show: true },
+>     transitions: { fade: function ( t, params ) {...} },
+>     nestedTransitions: false
+> });
+>
+> // the 'red' item will fade out
+> ractive.shift('items');
+>
+> // if nestedTransitions were true, the 'blue' item would fade out before the h2 and ul would,
+> // but since it's false, the li will not fade on its own
+> ractive.toggle('show');
+> ```
+
 > <a id="noIntro"></a>
 > ### noIntro *`Boolean`*
 > Defaults to `false`. Whether or not to skip intro transitions on render.
 > ```js
 > var ractive = new Ractive({
->     template: '<ul>\{{#items}}<li intro="fade">\{{.}}</li>\{{/items}}</ul>',
+>     template: '<ul>\{{#items}}<li fade-in>\{{.}}</li>\{{/items}}</ul>',
 >	    data: { items: [ 'red', 'blue' ] },
 >     transitions: { fade: function ( t, params ) {...} },
 >     noIntro: true
 > });
 > // 'red' and 'blue' list items do not fade in on intro
 >
-> ractive.get('items').push( 'green' );
+> ractive.push('items', 'green');
 > // 'green' list item will fade in
+> ```
+
+> <a id="noOutro"></a>
+> ### noOutro *`Boolean`*
+> Defaults to `false`. Whether or not to skip outro transitions on unrender.
+> ```js
+> var ractive = new Ractive({
+>     template: '<ul>\{{#items}}<li fade-out>\{{.}}</li>\{{/items}}</ul>',
+>	    data: { items: [ 'red', 'blue' ] },
+>     transitions: { fade: function ( t, params ) {...} },
+>     noOutro: true
+> });
+> ractive.unrender();
+> // 'red' and 'blue' list items do not fade out
+>
+> ractive.render()l
+> ractive.shift('items');
+> // 'red' item will fade out
 > ```
 
 > <a id="complete"></a>
@@ -465,8 +533,8 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 > });
 > console.log( ractive.toHTML() );
 > // "<p>hello
->
->  	world   </p>"
+> //
+> //	world   </p>"
 > ```
 >
 > Please note that the browser will still deal with whitespace in the normal fashion.
@@ -504,3 +572,37 @@ A `key: value` hash of transitions that are specific to this instance. The `key`
 > <div>the good stuff</div>
 > ```
 
+## Shortcuts
+<a id="shortcuts"></a>
+
+> <a id="observe"></a>
+> ### observe *`Hash`*
+> This is a shortcut for setting up observers as an instance is created. Each key in the object will be passed to {{{createLink 'ractive.observe()'}}} along with the paired function or options object. Keypaths can have spaces to separate additional keypaths and wildcards as with `observe()` keypaths. If the paired value is a function, it is passed as the callback for the observer. If the paired value is an object, it must have a `handler` member that is a function. Any additional keys in a paired object are passed as observer options, so you can specify `deferred: true` and `init: false`. If the options object contains `once: true`, {{{createLink 'ractive.observeOnce()'}}} will be used instead of `ractive.observe()`.
+> ```js
+> new Ractive({
+>   observe: {
+>     'multiple keypaths.at.a time.*.with.wildcards': function(newValue, oldValue, keypath, firstPart) { /* do something */ },
+>     'other.path': {
+>        handler(v) { /* do something */},
+>        init: false,
+>      }
+>   }
+> })
+> ```
+> Observers are subscribed just after the `config` phase of the instance lifecycle.
+
+> <a id="on"></a>
+> ### on *`Hash`*
+> This is a shortcut for setting up event listeners as an instance is created. Each key in the object will be passed to {{{createLink 'ractive.on()'}}} along with the paired function or options object. Events may be separated by spaces and may have wildcards as with `on()`. If the paired value is a function, it is passed as the callback for the event. If the paired value is an object, it must have a `handler` member that is a function. If `once: true` is included in the object, then {{{createLink 'ractive.once()'}}} will be used instead of `ractive.on()`.
+> ```js
+> new Ractive({
+>   on: {
+>     'doSomething *.aThingHappened': function(event, arg1) { /* do something */ },
+>     'firstTime': {
+>        handler(v) { /* do something */},
+>        once: true
+>      }
+>   }
+> })
+> ```
+> Observers are subscribed just after the `construct` phase of the instance lifecycle, meaning that lifecycle events that occur after `construct` may also have listeners installed from the `on` hash.
