--- a/docs/edge/References.md.hbs
+++ b/docs/edge/References.md.hbs
@@ -8,14 +8,15 @@ By themselves, references are useless - they must *resolve* to a *{{{createLink 
 The resolution algorithm looks like this:
 
 1. Is the reference a special ref? If so, resolve with the appropriate special keypath.
-2. If the reference is explicit or matches a path in the current context exactly, resolve with that keypath.
-3. Grab the current virtual node from the template hierarchy.
-4. If there are any aliases, index, or key mapping defined that match, resolve with that keypath.
-5. If this is a component and there are any matching mappings, resolve with that keypath.
-6. If this node has context and there is a matching path, resolve with that keypath.
-7. Otherwise, remove the innermost context from the stack. Repeat (3-7).
-8. See if `reference` is a valid keypath by itself. If so, resolve with that keypath.
-9. If the reference is still unresolved, add it to the 'pending resolution' pile. Each time potentially matching keypaths are updated, resolution will be attempted for the unresolved reference.
+2. If the reference is prefixed (`./`, `../`, `^^/`), resolve it.
+3. If the current context has a matching key, then resolve with it.
+4. Grab the current virtual node from the template hierarchy.
+5. If there are any aliases, index, or key mapping defined that match, resolve with that keypath.
+6. If this is a component and there are any matching mappings, resolve with that keypath.
+7. If this node has context and there is a matching path, resolve with that keypath.
+8. Otherwise, remove the innermost context from the stack. Repeat (3-7).
+9. If not disabled, check to see if there's a matching Ractive instance method or property, and if so, resolve with it.
+10. If the reference is still unresolved, add it to the 'pending resolution' pile. Each time potentially matching keypaths are updated, resolution will be attempted for the unresolved reference.
 
 ## Huh?
 
@@ -180,6 +181,21 @@ The above example could also use a root reference:
 </ul>
 ```
 
+### Context parent references
+
+Sometimes you have a nested context that puts a parent completely out of reach by keypath e.g.:
+
+```html
+\{{#each foos}}
+  \{{#with ~/bar}}
+    \{{.someBarThing}}
+    How do I get to the current foo?
+  \{{/with}}
+\{{/each}}
+```
+
+That's a terribly contrived example, as reasonable scenarios tend to be considerably more complex, but it gets the point across. Within the `~/bar` context, there's no way to access the current `foos` iteration. That's where the `^^/` prefix comes in. It mirrors what the `../` prefix does with keypaths, except it operates on the context stack. Like `../` it is also stackable, so if you need to access a much higher context ancestor, you can do so e.g. `^^/^^/^^/^^/ohMy`.
+
 ## Special references
 
 There are a few things that can be useful to reference from the template that don't really exist in your data. For instance, the current iteration index of a repeated section. These special references can be used just like any other data reference, excepting two-way binding. Here's the list of specials and their resolutions:
@@ -190,10 +206,19 @@ There are a few things that can be useful to reference from the template that do
 3. `@rootpath` - the same as keypath, except not adjusted for components.
 4. `@global` - the current global object for this environment e.g. `window` in a browser or `global` in node. This reference can be used with two-way binding, but note that if something outside of Ractive changes a value, Ractive won't know unless you tell it to `update`.
 5. `@this` - the current Ractive instance e.g. the current component or the Ractive root. You can access any properties or methods available on a Ractive instance with this, and due to the way capture works, you can also use `@this.get('...')` in a binding and it will update with the target keypath.
+  * `@` followed by a `.` is shorthand for `@this` e.g. `@this.set` shorthand would be `@.set`.
+6. `@shared` - a model that is globally shared across all Ractive instances. It's effectively a version of `@global` that can't be trampled by other scripts that happen to be executing on the page.
+
+### Instance parents and data
+
+Instance references (`@this`) with a path that resolves to a Ractive instance e.g. `@this.parent` or `@.root` will resolve to the actual Ractive model as though `@this` were being referenced from the template of the parent instance. This avoids creating disjoint model trees across instances that can get out of sync.
+
+Further, there is a special `data` property available to instance models that resolves to the actual root model on the instance. So `@this.parent.data.foo` resolves to the `~/foo` model on the current instance's parent. This also avoids creating complex expressions in your viewmodel that can get out of sync across instances. If any parents happen to change, for instance by detaching and reattaching to a new parent, the references are kept up-to-date as well.
 
 ## Summary of prefixes
 
 * `~/` means at the current instance root.
 * `.` means the current context. When more path follows, it follows the path from the current context.
-* `../` means the parent of the current context and may also be stacked and have a following path.
+* `../` means the parent keypath of the current context and may also be stacked and have a following path.
+* `^^/` means the parent of the current context and may also be stacked and have a following path.
 * `@` means this is a special reference that has meaning specified by where it exists in the template e.g. `@index` means the current iteration index of the containing repeated section.
