--- a/docs/edge/ractive.link().md.hbs
+++ b/docs/edge/ractive.link().md.hbs
@@ -23,7 +23,7 @@ This can be used to great effect with method events and the `@keypath` special r
 Name: <input value="\{{~/current.name}}" />
 ```
 
-> ### ractive.link( source, destination )
+> ### ractive.link( source, destination[, options] )
 > Returns a `Promise` (see {{{createLink 'Promises'}}})
 
 > > ### **source** *`String`*
@@ -31,5 +31,9 @@ Name: <input value="\{{~/current.name}}" />
 
 > > ### **destination** *`String`*
 > > The keypath to use as the destination - or where you'd like the data 'copied'.
+
+> > ### **options** *`Object`*
+> > Options to use when creating the link:
+> > * **ractive** *`Ractive instance`* - the target Ractive instance against which to create the link. Cross-instance links are the same mechanism used by component mappings to share data between parents and their child components.
 
 Links can be removed using {{{createLink 'ractive.unlink()'}}}.
