--- a/docs/edge/Get started.md.hbs
+++ b/docs/edge/Get started.md.hbs
@@ -29,3 +29,5 @@ If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to 
 *Documentation for previous versions: [0.3.9](../0.3.9), [0.4.0](../0.4.0), [0.5.x](../0.5), [0.6.x](../0.6), [0.7.x](../0.7), [0.8.x](../0.8)*
 
 *Documentation for latest version: [latest](../latest)*
+
+*Documentation for edge version: [edge](../edge)*
