--- a/docs/edge/Get started.md.hbs
+++ b/docs/edge/Get started.md.hbs
@@ -6,6 +6,19 @@ Welcome! These pages aim to provide all the information you need to master Racti
 
 If you see something wrong, out of date, or missing from this documentation, please check out our {{{createLink 'Known issues, FAQs, and Tips' 'known issues and FAQs'}}}, [raise an issue on GitHub](https://github.com/ractivejs/docs.ractivejs.org/issues) or - even better - submit a pull request. Your fellow Ractive users will thank you!
 
+## Where to get Ractive
+
+Ractive is published regularly to npm as both regular and dev builds. Since [unpkg](https://unpkg.com) mirrors the npm registry in link-friendly way, you can download or link to any Ractive version from there:
+
+| Version | URL |
+| ------- | --- |
+| latest  | https://unpkg.com/ractive |
+| edge | https://unpkg.com/ractive@edge |
+| 0.8 unreleased stable | https://unpkg.com/ractive@v0.8-dev |
+| 0.7.3 | https://unpkg.com/ractive@0.7.3 |
+
+## 15 second overview
+
 Using Ractive is very simple. An instance is created using `new Ractive({...})`
 with the desired options:
 
@@ -25,6 +38,8 @@ Checkout the {{{createLink 'Options' 'Configuration Options'}}} to learn more ab
 all the available options.
 
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
+
+## Documentation for other versions
 
 *Documentation for previous versions: [0.3.9](../0.3.9), [0.4.0](../0.4.0), [0.5.x](../0.5), [0.6.x](../0.6), [0.7.x](../0.7), [0.8.x](../0.8)*
 
