--- a/docs/edge/Proxy events.md.hbs
+++ b/docs/edge/Proxy events.md.hbs
@@ -29,42 +29,12 @@ The first argument to a proxy event handler is always a Ractive `event` object. 
 
 * `event.name` - the name of the event, in this case 'activate'
 * `event.node` - the DOM node in question
-* `event.keypath` - the {{{createLink 'Keypaths' 'keypath'}}} of the current context
-* `event.context` - the value of `this.get(event.keypath)`
-* `event.index` - a map of index references
 * `event.component` - the component that raised the event, only present on {{{createLink 'event bubbling' 'bubbled events'}}}
 * `event.original` - the original DOM event, if available
 
-In the example above, `event.keypath` might be `items.0` for the first item in the list, `items.1` for the second, and so on. The `event.index` map would have a property `i`, which would correspond to those indices.
+The event is also a context object with a number of context-relative methods. See {{{createLink 'Ractive.getNodeInfo()' 'node info helpers' 'helpers'}}} for more details.
 
 The event object is also available in event handlers using `this.event`, see {{{createLink 'publish-subscribe' 'publish-subscribe' 'accessing-the-event-object'}}} for more details.
-
-### Custom arguments
-
-__NOTE:__ Arguments to proxy events have been deprecated because they are too easy to break. If you need to pass arguments with your event, you can use `@this.fire('myEvent', event, arg1, arg2, etc)`.
-
-We might want to pass arguments to our handler in addition to the `event` object. We can do that by listing them, comma-separated, after the event name:
-
-```html
-<h1>Let's shop!</h1>
-<ul>
-  \{{#each items: i}}
-    <li>
-      <p>\{{i+1}}: \{{description}}</p>
-      <label><input value='\{{qty}}'> Quantity</label>
-
-      <!-- when the user clicks this button, add {\{qty}} of this item -->
-      <button on-click='addToCart:\{{this}},\{{qty}}'>Add to cart</button>
-    </li>
-  \{{/each}}
-</ul>
-```
-
-```js
-ractive.on( 'addToCart', function ( event, item, qty ) {
-  /* code goes here */
-});
-```
 
 ### Cancelling DOM events
 
@@ -78,19 +48,3 @@ If you only want to cancel the DOM event, you can call the appropriate methods d
 ## Reserved event names
 
 Note: the built-in {{{createLink 'lifecycle events'}}} are **reserved**, which means you can't use their names as proxy events.
-
-
-## Dynamic proxy event names
-
-{{{createLink 'Mustaches' 'Mustache references'}}} can be used as proxy event names:
-
-```html
-<button on-click="\{{handler}}">click me!</button>
-```
-
-In practive this is of limited value, but a more important side effect is that if no handler is specified (a falsey value) the DOM event is not subscribed and will unsubscribe or resubscribe as the handler value changes. Combined with a conditional section, this allows a proxy event to be conditionally subscribed _at the DOM level_:
-
-```html
-<button on-click="\{{#active}}select\{{/}}">click me!</button>
-```
-In this example, the DOM `click` event is subscribed and unsubscribed as the value of `active` is truthy or falsey.
