--- a/docs/edge/ractive.get().md.hbs
+++ b/docs/edge/ractive.get().md.hbs
@@ -1,8 +1,18 @@
 ---
 title: ractive.get()
 ---
-> ### ractive.get( keypath )
+> ### ractive.get( keypath[, options ] )
 > Returns the value at `keypath` (see {{{createLink 'Keypaths'}}})
 
-> ### ractive.get()
-> Returns a shallow copy of all data (the equivalent of `ractive.get('')`). This does not include {{{createLink 'computed properties' 'Computed Properties' }}}, but it does include any mappings if `ractive` happens to be a component instance with mappings.
+> > #### **keypath** *`String`*
+> > The keypath for which to return a value.
+> > #### **options** *`Object`*
+> > Optional values that affect the returned value:
+> > * **virtual** *`Boolean`* - default `false` - if `true`, the returned value will be a deep POJO clone of the target keypath with any nested links copied in from their sources.
+
+> ### ractive.get([ options ])
+> Returns a copy of all of the data and, by default, any computations and linked or mapped data copied into the tree.
+
+> > #### **options** *`Object`*
+> > Optional values that affect the returned value:
+> > * **virtual** *`Boolean`* - default `true` - if `true`, the returned value will be a deep POJO clone of the root model, including computations, with any nested links copied in from their sources. If `false`, the raw root object will be returned.
