--- a/docs/0.8/Plugins.md.hbs
+++ b/docs/0.8/Plugins.md.hbs
@@ -25,6 +25,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Foundation](http://ractive-foundation.github.io/ractive-foundation)
 * [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
 * [Select](https://github.com/JonDum/ractive-select) a `<select>` replacement component
+* [Split](https://dagnelies.github.io/ractive-split)
 * [Stepper](https://github.com/JonDum/ractive-stepper) a numeric stepper component
 
 ## {{{createLink 'Decorators'}}}
